begin adding materialize components

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
   </head>
 
   <body>
-    <h1>Dexters website</h1>
+    <% include partials/nav.ejs %>
+    <h1 >Dexters website</h1>
   </body>
 </html>
