--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
       <li><a href="/projects">Projects</a></li>
     </ul>
     <ul class="side-nav" id="mobile-demo">
-      <li><a href="sass.html">Contact</a></li>
+      <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
       <li><a href="/projects">Projects</a></li>
     </ul>
