--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,6 +5,19 @@
 
   <body>
     <% include partials/nav.ejs %>
-    <h1>about dexter</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <img class="materialboxed" width="100%" src="images/headshot.jpg">
+        </div>
+        <div id="textbox" class="col s10 m4 l4">
+          <h4>This is a blurb about dexter</h4>
+          <p>
+            This is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexter
+          </p>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
