--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,19 @@
 
   <body>
     <% include partials/nav.ejs %>
-    <h1 >Dexters website</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6 l8">
+          <h4>This is a blurb about dexter</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m6 l4">
+          <p>
+            This is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexterThis is a blurb about dexter
+          </p>
+        </div>
+    </div>
+  </div>
   </body>
 </html>
