--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,10 +1,32 @@
 <html>
-  <head>
-    <% include partials/head.ejs %>
-  </head>
 
-  <body>
+<head>
+    <% include partials/head.ejs %>
+</head>
+
+<body>
     <% include partials/nav.ejs %>
-    <h1>Dexters projects</h1>
-  </body>
+        <div class="container">
+            <h1>Dexters projects</h1>
+            <% for(var i = 0; i < 2; i++) {%>
+            <div class="row">
+                <div class="col s6 m7">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src=<%= projects[i].images[0] %>>
+                            <span class="card-title"><%= projects[i].title %></span>
+                        </div>
+                        <div class="card-content">
+                            <p><%= projects[i].description %></p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">This is a link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% } %>
+        </div>
+</body>
+
 </html>
