--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,3 +7,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="/stylesheets/application.css" rel="stylesheet">
+<script src="/javascripts/application.js"></script>
