--- a/views/projectSingle.ejs
+++ b/views/projectSingle.ejs
@@ -5,6 +5,21 @@
 
   <body>
     <% include partials/nav.ejs %>
-    <h1>one of dexters projects </h1>
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m12 l8">
+          <img class="materialboxed" width="100%" src="../<%= project.images[0] %>">
+        </div>
+        <div class="col s12 m12 l4">
+          <h4><%= project.title %></h4>
+          <p><%= project.description %></p>
+        </div>
+        <% for(var i = 1; i < project.images.length; i++) {%>
+          <div class="col s12 m12 l8">
+            <img class="materialboxed" width="100%" src="../<%= project.images[i] %>">
+          </div>
+        <% } %>
+      </div>
+    </div>
   </body>
 </html>
