--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -8,18 +8,17 @@
     <% include partials/nav.ejs %>
         <div class="container">
           <div class="row">
-            <% for(var i = 0; i < 6; i++) {%>
+            <% for(var i = 0; i < projects.length; i++) {%>
                 <div class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
+                          <a href="http://127.0.0.1:3000/projects/<%= projects[i].projectId %>">
                             <img src=<%= projects[i].images[0] %>>
                             <span class="card-title"><%= projects[i].title %></span>
+                          </a>
                         </div>
                         <div class="card-content">
                             <p><%= projects[i].description %></p>
-                        </div>
-                        <div class="card-action">
-                            <a href="http://127.0.0.1:3000/projects/<%= projects[i].projectId %>">See More</a>
                         </div>
                     </div>
                 </div>
